# sirius_cell_royale

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  tuning.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: build.yml
cmake/: FetchDependencies.cmake  platforms.cmake
docs/game_mechanics/: README.md
src/: main.cpp
src/ai/: BotController.cpp  BotController.h  BotDirector.cpp  BotDirector.h  BotPersonality.cpp  BotPersonality.h
src/client/: Camera.cpp  Camera.h  Client.cpp  Client.h  DevConsole.cpp  DevConsole.h  Hud.cpp  Hud.h  Interpolator.cpp  Interpolator.h  IntroScreen.cpp  IntroScreen.h  LocalLobby.cpp  LocalLobby.h  MainMenu.cpp  MainMenu.h  Renderer.cpp  Renderer.h  RoyaleMenu.cpp  RoyaleMenu.h  SettingsScreen.cpp  SettingsScreen.h  UiWidgets.cpp  UiWidgets.h
src/core/: Command.h  Events.h  Mutations.cpp  Mutations.h  Rng.h  Snapshot.h  Tuning.cpp  Tuning.h  Types.h
src/feel/: Audio.cpp  Audio.h  ChromaShift.cpp  ChromaShift.h  Hitstop.cpp  Hitstop.h  Particles.cpp  Particles.h  Popups.cpp  Popups.h  ScreenShake.cpp  ScreenShake.h
src/meta/: Missions.cpp  Missions.h  SaveFile.cpp  SaveFile.h
src/platform/: Input.cpp  Input.h  InputDesktop.cpp  InputTouch.cpp  Paths.cpp  Paths.h
src/sim/: Replay.cpp  Replay.h  Rules.cpp  Rules.h  Simulation.cpp  Simulation.h  World.cpp  World.h
src/transport/: Codec.cpp  Codec.h  ITransport.h  LocalDiscovery.cpp  LocalDiscovery.h  LocalTransport.cpp  LocalTransport.h  NetworkTransport.cpp  NetworkTransport.h
test/: determinism_test.cpp
